(library
 (name compile_lib)
 (libraries stdio Frontend cconv ppxlib.stdppx)
 (modules ANF CPS CFlags compile_tests)
 (preprocess
  (pps ppx_expect bisect_ppx))
 (inline_tests))

(library
 (name cconv)
 (libraries Frontend)
 (modules CConv monads)
 (wrapped false)
 (preprocess
  (pps ppx_expect bisect_ppx))
 (inline_tests))

(executable
 (name compiler)
 (modules compiler)
 (libraries stdio base Frontend compile_lib))

(rule
 (targets rukaml_stdlib.o)
 (deps rukaml_stdlib.c)
 (action
  (run
   gcc
   -g
   %{deps}
   -c
   -o
   %{targets}
   ;
   )))
